Fixed misaligned card header

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -76,5 +76,6 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        min-width: 0;
     }
 }
